tests/invalid/Switch_Invalid_2.whiley
function f(int x) -> int:
    switch x:
        default:
            return 0
        case 1:
            return -1
    return 10
